# GraphRAG-SupplyChain

./: .env_template  .gitignore  LICENSE  README.md  app.py  docker-compose.yaml  nodes.csv  pyproject.toml  requirements.txt  supply_chain_assistant.py  tools.py
sample_data/: relationships.csv
src/: supply_chain_assistant.py
src/models/: models.py
src/tools/: supply_count.py  supply_list.py
